clusters/cloudydad/apps/gitea/app/gitea-ingressroute-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`git.cloudydad.world`)
      services:
        - name: gitea
          port: 22
  tls:
    passthrough: true
